--- a/chat-server/src/main/resources/static/ws-test.html
+++ b/chat-server/src/main/resources/static/ws-test.html
@@ -128,7 +128,7 @@
             content,
             metadata: null
         };
-        client.send('/pub/chat.send', {}, JSON.stringify(payload));
+        client.send('/pub/chat/send', {}, JSON.stringify(payload));
         log(`➡️ SENT: ${JSON.stringify(payload)}`);
     }
 
