[#133] fix(ws-test): 변경된 엔드포인트 적용

--- a/chat-server/src/main/resources/static/ws-test.html
+++ b/chat-server/src/main/resources/static/ws-test.html
@@ -128,7 +128,9 @@
             content,
             metadata: null
         };
-        client.send('/pub/chat/send', {}, JSON.stringify(payload));
+        client.send('/pub/chat/send',
+            { 'content-type': 'application/json' },
+            JSON.stringify(payload));
         log(`➡️ SENT: ${JSON.stringify(payload)}`);
     }
 
